# mdx-notes

./: .env  .env.example  .eslintrc.json  .gitignore  README.md  README_CN.md  README_EN.md  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: main.yml  release.yml
patches/: mermaid-isomorphic+2.1.0.patch  monaco-editor+0.33.0.patch
public/: ads.txt
public/favicons/: site.webmanifest
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  folder.rs  main.rs  menu.rs  tray.rs
src/app/: layout.tsx  page.tsx  supabase-provider.tsx  supabase-server.ts
src/codemirror/: tailwindcssMode.js
src/components/: App.js  CheckUpdate.tsx  Copy.jsx  Editor.js  Editor.tsx  EditorDesktop.js  EditorMobile.js  ErrorOverlay.js  FileTree.jsx  FileTree.tsx  Header.js  Header.tsx  HeaderElement.js  Hero.jsx  ImagePreview.tsx  JournalButton.tsx  Layout.tsx  Loading.tsx  Logo.js  Main.jsx  MoreDropdown.tsx  Pen.jsx  Pen.tsx  Preview.js  Preview.tsx  SearchList.js  SearchList.tsx  Select.tsx  SettingModal.tsx  Share.js  TabBar.js  ThemeDropdown.js  TocList.js  TocList.tsx  TopBar.tsx  Tree.tsx  Update.jsx  User.tsx  empty-placeholder.tsx  login-modal.tsx  (+6 more)
src/config/: site.ts
src/css/: main.css  mdx.css  mdx.js  prism-coy.css  prism-okaidia.css  prism-seti.css  tailwind.css  tiptap.css
src/hooks/: compileMdx.js  useDebouncedState.js  useGlobalValue.ts  useTemplates.tsx
(+176 files in other folders)
