[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-process = "2.0.0-beta.6"
tauri-plugin-clipboard = "2.1.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
tauri-plugin-window-state = "2.0.0-beta"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.8"

